Add new features.

--- a/website_template/index.html
+++ b/website_template/index.html
@@ -42,27 +42,25 @@
         </div>
         <div class="featured-product">
             <div class="tab-controll">
-                <div class="featured">
-                    <a class="feature_link" href="#">Featured</a>
+                <div class="featured_new">
+                    <a class="feature_link" href="#">Featured</a><a class="new_link" href="#">New</a>
                 </div>
-                <div class="new">
-                    <a class="new_link" href="#">New</a>
-                </div>
-                <div class="explore_all">
-                    <a class="explore_all_link" href="#">
-                        explore all
-                        <img src="img/arrow.svg" alt="arrow">
-                    </a>
-                </div>
+
+                <a class="explore_all_link" href="#">
+                    explore all
+                    <img src="img/arrow.svg" alt="arrow">
+                </a>
+
             </div>
             <div class="tab-content">
                 <div class="product product_active">
-                    <div class="product_active_button">
-                        <button><img src="img/arrow_featured.svg" alt="arrow"></button>
+                    <div class="background-product">
+                        <button class="product_active_button"><img src="img/arrow_featured.svg" alt="arrow"></button>
+                        <span class="product_active_title">Fishnet Chair</span>
+                        <p class="product_active_text">
+                            Seat and back with upholstery made of cold cure foam.</p>
                     </div>
-                    <div class="product_active_titile">Fishnet Chair</div>
-                    <div class="product_active_text">
-                        Seat and back with upholstery made of cold cure foam.</div>
+
                 </div>
                 <div class="product"><a href="#"><img src="img/product_2.jpg" alt="product_2"></div></a>
                 <div class="product"><a href="#"><img src="img/product_3.jpg" alt="product_3"></div></a>
@@ -72,7 +70,7 @@
         <div class="promo-product">
             <div class="promo-content-1">
                 <span class="promo-1-exclusive">exclusive</span>
-                <h1 class="promo-1-title">Fishnet Chair</h1>
+                <span class="promo-1-title">Fishnet Chair</span>
                 <p class="promo-1-text">Seat and back with upholstery made of cold cure foam.
                     Steel frame, available in matt
                 </p>
@@ -92,13 +90,13 @@
         </div>
         <div class="trending_products">
             <div class="trending_header">
-                <div class="trending-title">Trending Products</div>
-                <div class="trending-explore_all">
-                    <a class="trending-explore_all_link" href="#">
-                        explore all
-                        <img src="img/arrow.svg" alt="arrow">
-                    </a>
-                </div>
+                <span class="trending-title">Trending Products</span>
+
+                <a class="trending-explore_all_link trending-explore_all" href="#">
+                    explore all
+                    <img src="img/arrow.svg" alt="arrow">
+                </a>
+
             </div>
             <div class="trending_items">
                 <div class="item_1"><img src="img/item_1.jpg" alt="item_1"></div>
