Home page is done.

--- a/index.html
+++ b/index.html
@@ -107,6 +107,96 @@
                 <div class="item_6"><img src="img/item_6.jpg" alt="item_6"></div>
             </div>
         </div>
+
+        <div class="slider hot-deal">
+            <div class="slider-content content-hot-deal">
+                <span class="slider-trending trending-hot-deal">Hot deal</span>
+                <h1 class="slider-title title-hot-deal">Fishnet Chair</h1>
+                <p class="slider-text text-hot-deal">Seat and back with upholstery made of cold cure foam.
+                    Steel frame, available in matt powder-coated black
+                </p>
+                <button class="slider-button button-hot-deal">Order Us<img class="slider-arrow" src="img/arrow.svg"
+                        alt="arrow">
+                </button>
+
+            </div>
+            <div class="pagination pagination-hot-deal">
+                <a class="pagination-item" href="#"></a>
+                <a class="pagination-item" href="#"></a>
+                <a class="pagination-item" href="#"></a>
+            </div>
+        </div>
+
+        <div class="other-products">
+            <div class="exclusive">
+                <span class="exclusive-trending">exclusive</span>
+                <h1 class="exclusive-title">Fishnet Chair</h1>
+                <p class="exclusive-text">Seat and back with upholstery made of cold cure foam.
+                    Steel frame, available in matt powder-coated black
+                </p>
+                <button class="slider-button">Order Us<img class="slider-arrow" src="img/arrow.svg" alt="arrow">
+                </button>
+            </div>
+            <div class="products">
+                <img src="img/exclusive_1.jpg" alt="product" class="ex-product-1">
+                <img src="img/exclusive_2.jpg" alt="product" class="ex-product-2">
+                <img src="img/exclusive_3.jpg" alt="product" class="ex-product-3">
+                <img src="img/exclusive_4.jpg" alt="product" class="ex-product-4">
+            </div>
+        </div>
+
+        <div class="mobile-app">
+            <div class="app-content">
+                <span class="app-tag">mobile app</span>
+                <h1 class="app-name">Find. Follow. Favorite.</h1>
+                <p class="app-datails">Save your favorites and share your style.</p>
+                <button class="app-store-button"><img class="app-store" src="img/app_store.jpg" alt="app-store">
+                </button>
+                <button class="google-button"><img class="google" src="img/google.jpg" alt="google">
+                </button>
+            </div>
+        </div>
+
+        <div class="footer">
+            <div class="footer-1">
+                <div class="contact-us">
+                    <h1 class="contact-title">Contact Us</h1>
+                    <span class="contact-1">132A Bridge Road Richmond VIC
+                        Australia.<br><br>
+
+                        Talk to us on 1300 132
+                        info@interior.com</span>
+                </div>
+                <div class="useful-info">
+                    <h1 class="useful-title">Useful Information</h1>
+                    <div class="links">
+                        <div class="link-1">
+                            <a href="">Sales terms</a>
+                            <a href="">Customer care</a>
+                            <a href="">Delivery</a>
+                        </div>
+                        <div class="link-2">
+                            <a href="">Architect accounts</a>
+                            <a href="">Careers</a>
+                            <a href="">Exchanges & return</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="touch">
+                    <h1 class="touch-title">Let’s Stay in Touch!</h1>
+                    <span class="touch-content">Suscribe to know about our latest news, products and special offers just
+                        for suscribers.</span>
+                    <input type="text" class="touch-input" placeholder="your email address">
+                </div>
+            </div>
+            <div class="info">
+                <span class="info-copyright">© Copyright - INTERIOR 2016. All Rights Reserved.</span>
+                <div class="info-social-links">
+                    <img src="img/social_links.jpg" alt="social-links">
+                </div>
+                <span class="info-other">Terms & Conditions / Privacy policy & Cookies</span>
+            </div>
+        </div>
     </div>
 
 </body>
